fixed spacing at top of page

--- a/homework/hw02/styles.css
+++ b/homework/hw02/styles.css
@@ -34,7 +34,7 @@ body {
 
 .page {
     display: flex;
-    margin-top: 70px;
+    margin-top: 100px;
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
